[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Sprites/Solar_2_card.png" type="Texture" id=1]
[ext_resource path="res://Buildings/Solar_buildings/Buildings/Solar_2_building.gd" type="Script" id=2]

[node name="Solar_2_building" type="Node2D" groups=[
"Building",
]]
position = Vector2( 432, 320 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -28 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 3.98157, 31.9693, 3.98157, 30.0026, 2.9872, 30.0689, 2.83252, 19.9485, 4.88754, 19.9485, 5.04222, 18.9762, 10.0141, 18.9541, 10.0141, 17.8934, 14.4341, 18, 31.9749, 7.44577, 31.9633, -14.1662, 12.7496, -28.2615, -15.5987, -28.2615, -31.8201, -16.5285, -31.8201, 7.48874, -27.7254, 7.72496, -16.5436, 17.2531, -10.3228, 18.4343, -5.5193, 19.6155, -3.55067, 20.4029, -3.41408, 29.4806, -4.12119, 29.6574, -4.12119, 31.4694 )

[node name="Production_timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Production_timer" to="." method="_on_Production_timer_timeout"]
